app/assets/stylesheets/common/datasets-table.css.scss
@import "../variables/mixins";
@import "../variables/colors";
@import "../variables/sizes";

/* compensate for the negative margins and border */
$selectedItemPaddingOnSides: $sMargin-element - 1px;
$opacityTransition: 250ms;

$bannedColor: #E1A7A5;

.DatasetsTable {
  position: relative;
  width: 100%;
  margin: 0 auto;
  
}
.DatasetsTable thead {
  background: $DarkGrey5;
}
.DatasetsTable th {
  border-bottom: 1px solid $Black;
}
.DatasetsTable tr {
  width: 100%;
}
.DatasetsTable th,td,
.DatasetsTable-item th,td
{
  text-align: left;  
  border-right: 1px solid $Black;
  line-height: 27px;
  padding: 0px 6px !important;

  .DatasetTitle-link {
    border-bottom: 1px $Grey2 dotted;
  }
}

.DatasetsTable th,td
{
  &:nth-child(1) { width: 26px; }
  &:nth-child(2) { width: 34px; }
  &:nth-child(3) { width: 30%; }
  &:nth-child(5) { width: 120px; }
  &:nth-child(6) { width: 24px; }
}
.DatasetsTableHeaderContainer
{
  background: $DarkGrey5;
  height: 30px;
  &.padded {
    padding-right: 12px;
  }
}

.DatasetsTable.is-hidden { display: none }
.DatasetsTable-item {
  border: 1px solid transparent;
  border-bottom: 1px solid $Black;
  padding: 6px;
}

.DatasetsTable-item--selectable:hover,
.DatasetsTable-item--selectable.is--selected {  
}
.DatasetsTable-item--selectable:hover {
  background-color: $gridRowBackgroundHover;
  cursor: pointer;
  .DatasetsTable-itemDescription .DefaultDescription:after {
    @include background-horizontal(rgba(255,255,255,0), $gridRowBackgroundHover);
  }
}
.DatasetsTable-item--selectable.is--selected {
  background-color: $gridRowBackgroundSelected;
  outline: 1px solid $SelectionBlue2;
  &:hover { cursor: default }
  .DatasetsTable-itemDescription .DefaultDescription:after {
    @include background-horizontal(rgba(255,255,255,0), $gridRowBackgroundSelected);
  }
}

.RowCheckbox,
.RowCheckbox.is--selected {
  top: 4px;
  left: 0;
  width: 13px;
  height: 13px;
  color: black;
  background-color: #4d4d4d;
  border: 1px solid #000;
  border-radius: 2px;
}
.RowCheckbox.is--selected {
  background-image: url("../images/beam_checkbox_check_black.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 7px 7px;
  background-color: #3c9fff;
}

.DatasetTypeIcon {
  margin-top: 3px;
  width: 20px;
  height: 20px;
  background-size: contain;

  background-repeat: no-repeat;
}
.DatasetTypeIcon.imported {
  background-image: url("../images/layout/wizard-choropleth-polygon.png");
}
.DatasetTypeIcon.library {
  background-image: url("../images/layout/raster-dataset.png");
}

.DatasetsTable-fake {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  @include background(image-url('layout/dataset-placeholder.png') no-repeat center center);
  z-index: 0;
  @include opacity(0);
  @include transition(opacity, $opacityTransition);
}
.DatasetsTable.is-loading .DatasetsTable-item,
.DatasetsTable.is-loading .DatasetsTable-item--selectable,
.DatasetsTable.is-loading .DatasetsTable-item--selectable.is--selected,
.DatasetsTable.is-loading .DatasetsTable-item:hover,
.DatasetsTable.is-loading .DatasetsTable-item--selectable:hover,
.DatasetsTable.is-loading .DatasetsTable-item--selectable:hover.is--selected {
  margin: 0;
  padding: $sMargin-group 0;
  border: none;
  border-bottom: 1px solid $cStructure-softLine;
  cursor: default;
  background: none;
  .DatasetsTable-itemCategory { @include opacity(0) }
  .DatasetsTable-itemInfo { @include opacity(0) }
  .DatasetsTable-fake { @include opacity(1) }
}

// Position of the geometry type icon
@mixin geometry-type-icon($x-pos: 0, $y-pos: 0) {
  @include background(image-url('layout/geometry-types-icons.png') no-repeat $x-pos $y-pos);
  @include image-2x("layout/geometry-types-icons@2x.png", 200px, 120px, ($x-pos), ($y-pos));
}

.DatasetsTable-itemCategory {
  position: relative;
  display: inline-block;
  min-width: 40px;
  height: 40px;
  margin-right: $sMargin-element;
  margin-top: 3px;
  @include geometry-type-icon(-160px);
  @include opacity(1);
  @include css3-prefix('transition', opacity $opacityTransition ease-in-out);
  border: none;
  z-index: 1;
}
.DatasetsTable-itemCategory.is--lineDataset { @include geometry-type-icon(-40px) }
.DatasetsTable-itemCategory.is--polygonDataset { @include geometry-type-icon(-80px) }
.DatasetsTable-itemCategory.is--pointDataset { @include geometry-type-icon() }
.DatasetsTable-itemCategory.is--rasterDataset { @include geometry-type-icon(-120px) }

.DatasetsTable-item--selectable:hover,
.DatasetsTable-item--selectable.is--selected {
  .DatasetsTable-itemCategory { @include geometry-type-icon(-160px, -40px) }
  .DatasetsTable-itemCategory.is--lineDataset { @include geometry-type-icon(-40px, -40px) }
  .DatasetsTable-itemCategory.is--polygonDataset { @include geometry-type-icon(-80px, -40px) }
  .DatasetsTable-itemCategory.is--pointDataset { @include geometry-type-icon(0, -40px) }
  .DatasetsTable-itemCategory.is--rasterDataset { @include geometry-type-icon(-120px, -40px) }
}

.DatasetsTable-itemStatus {
  position: absolute;
  top: -8px;
  right: -8px;
  width: 17px;
  height: 17px;
  line-height: 17px!important;
  border: 1px solid rgba(black, 0.1);
  border-radius: 17px;
  background: rgba(white, .85);
  font-size: 9px;
  color: $cHighlight-alert;
  text-align: center;
  z-index: 2;
}
.DatasetsTable-aditionalItemStatus {
  top: auto;
  bottom: -8px;
}
.DatasetsTable-itemStatus.iconFont-Book { font-size: 12px }
.DatasetsTable-itemStatus.is-public { color: $cHighlight-positive }
.DatasetsTable-itemStatus.is-banned { color: $bannedColor }
.DatasetsTable-itemStatus.is-failure { color: $cHighlight-negative }
.DatasetsTable-itemStatus.is-success { color: $cHighlight-positive }
.DatasetsTable-itemInfo {
  position: relative;
  @include display-flex();
  @include flex-direction(column);
  @include opacity(1);
  @include transition(opacity, $opacityTransition);
  z-index: 1;
}
.DatasetsTable-itemPrimaryInfo {
  @include display-flex();
  @include flex-direction(column);
  flex-grow: 1;
  width: 100%;
}
.DatasetsTable-itemSecondaryInfo {
  width: 100%;
  margin-top: 0;
}
.DatasetsTable-itemTitle {
  @include display-flex();
  @include align-items(center);
}
.DatasetsTable-itemTitle.is--disabled { color: $cTypography-help }
.DatasetsTable-itemTitlePermission {
  margin-left: $sMargin-elementInline;
  background: white;
}
.DatasetsTable-itemTimeDiff .UserAvatar {
  margin-left: $sMargin-min;
  height: $sAvatar-meta + 2;
}
.DatasetsTable-itemSource {
  @include display-flex();
  margin-left: $sMargin-min;
}
.DatasetsTable-itemMeta {
  @include display-flex();
  @include justify-content(flex-start, start);
  @include flex-wrap(wrap);
  margin-bottom: 2 * $sMargin-min;
}
.DatasetsTable-itemTags { margin-top: 4px }

  .DatasetsTable-itemMeta > * {
    width: auto;
    margin-right: 18px;
    text-align: center;
  }
  .DatasetsTable-itemMeta > *:last-child { margin-right: 0 }
  .DatasetsTable-itemMeta > *:nth-child(2) { @include flex-order(2) }
  .DatasetsTable-itemMeta > *:nth-child(3) { @include flex-order(3) }
  .DatasetsTable-itemMeta > *:nth-child(4) { @include flex-order(4) }
  .DatasetsTable-itemMeta > *:nth-child(5) { @include flex-order(5) }

  .DatasetsTable-itemTags.EditableField {
    text-align: right;
    .EditableField-input {
      text-align: right;
      width: 70%;
    }
  }
  .DatasetsTable-itemDescription {
    margin-top: 4px;
    height: $sLineHeight-normal;
    .DefaultDescription {
      @include line-clamp(1);
    }
  }

// Banned dataset
.DatasetsTable-item--banned {
  .DatasetsTable-itemTitle,
  .DatasetsTable-itemDescription,
  .SizeIndicator,
  .SizeIndicator .iconFont { color: $bannedColor }

  .DatasetsTable-itemCategory { @include geometry-type-icon(-160px, -80px) }
  .DatasetsTable-itemCategory.is--lineDataset { @include geometry-type-icon(-40px, -80px) }
  .DatasetsTable-itemCategory.is--polygonDataset { @include geometry-type-icon(-80px, -80px) }
  .DatasetsTable-itemCategory.is--pointDataset { @include geometry-type-icon(0, -80px) }
  .DatasetsTable-itemCategory.is--rasterDataset { @include geometry-type-icon(-120px, -80px) }

  .DatasetsTable-itemStatus { color: $bannedColor }
}

.DatasetInfoTooltip {
  text-align: left;
}

.DatasetsTableScrollable {
  height:calc(100% - 28px);
  overflow-y: auto;
}

@mixin DatasetsTableHeaderOrder {
  float: right;
  width: 10px;
  height: 25px;
  margin-top: 5px;
}

.DatasetsTableHeaderOrderAsc {
  @include DatasetsTableHeaderOrder;
  background: url('../images/sprites/table/filters_scroll_up.png') no-repeat top;
}

.DatasetsTableHeaderOrderDesc {
  @include DatasetsTableHeaderOrder;
  background: url('../images/sprites/table/filters_scroll_down.png') no-repeat top;
}

@media only screen and (max-width: $sMedia-mobile) and (max-width: 959px) {
  .DatasetsTable {
    width: 100%;
  }
  .DatasetsTable-itemTitle {
    margin-bottom: 3px;
  }
  .DatasetsTable-itemMeta {
    @include align-items(center);
  }
  .DatasetsTable-itemMeta > * {
    width: auto;
    margin-right: 10px;
    text-align: center;
  }
  .DatasetsTable-itemMeta > *:last-child { margin-right: 0 }
  .DatasetsTable-itemMeta > *:nth-child(2) { @include flex-order(2) }
  .DatasetsTable-itemMeta > *:nth-child(3) { @include flex-order(3) }
  .DatasetsTable-itemMeta > *:nth-child(4) { @include flex-order(4) }
  .DatasetsTable-itemMeta > *:nth-child(5) { @include flex-order(5) }
}
@media only screen and (max-width: $sMedia-tablet) {
  .DatasetsTable {
    width: 100%;
  }
  .DatasetsTable-itemTitle {
    margin-bottom: 3px;
  }
  .DatasetsTable-itemMeta {
    @include align-items(center);
  }
  .DatasetsTable-itemMeta > * {
    width: auto;
    margin-right: 10px;
    text-align: center;
  }
  .DatasetsTable-itemMeta > *:last-child { margin-right: 0 }
  .DatasetsTable-itemMeta > *:nth-child(2) { @include flex-order(2) }
  .DatasetsTable-itemMeta > *:nth-child(3) { @include flex-order(3) }
  .DatasetsTable-itemMeta > *:nth-child(4) { @include flex-order(4) }
}

@media (min-width: $sMedia-desktop) {
  .DatasetsTable {
    width: $sLayout-width;
    padding-left: 0;
    padding-right: 0;
  }
  .DatasetsTable-itemInfo {
    @include flex-direction(row);
    @include justify-content(space-between, justify);
    @include align-items(flex-start, start);
  }
  .DatasetsTable-itemPrimaryInfo { width: 430px }
  .DatasetsTable-itemSecondaryInfo {
    @include display-flex();
    @include flex-direction(column);
    flex-grow: 1;
    width: 430px;
  }
  .DatasetsTable-itemTitle {
    margin-bottom: 0;
  }
  .DatasetsTable-itemMeta {
    @include justify-content(flex-end, end);
    margin-bottom: 0;
  }
  .DatasetsTable-itemMeta > * {
    width: auto;
    margin-right: 18px;
    text-align: center;
  }
  .DatasetsTable-itemMeta > *:last-child { margin-right: 0 }
  .DatasetsTable-itemMeta > *:nth-child(2) { @include flex-order(2) }
  .DatasetsTable-itemMeta > *:nth-child(3) { @include flex-order(3) }
  .DatasetsTable-itemMeta > *:nth-child(4) { @include flex-order(4) }
}

